# open-relay

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_NOTES.md  ARCHITECTURE_PTY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPEC.md  SUPPORT.md  build.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  launch_feedback.md
.github/skills/Oly/: SKILL.md
.github/skills/oly/: SKILL.md
.github/skills/oly-apps/: SKILL.md
.github/skills/oly-start/: SKILL.md
.github/workflows/: ci-web.yml  ci.yml  release.yml
Formula/: oly.rb
docs/: SECURITY_AUDIT_REPORT.md  TOKEN_EXPIRY.md
dotnet-tool/: Program.cs  oly.csproj
hooks/session-review/: SPEC.md  main.rs
hooks/session-review-scripts/: README.md  SessionReview-Attach.ps1  SessionReview-Attach.vbs
migrations/: 0001_create_sessions.sql  0002_create_push_subscriptions.sql  0003_migrate_to_api_keys.sql  0004_add_session_tags.sql
milestones/: M10_agent_signaling.md  M12_enterprise_policy.md  M1_foundation.✅.md  M2_session_lifecycle.✅.md  M3_persistence.✅.md  M4_security_hardening.md  M5_http_api_websocket.md  M6_federation.✅.md  M6_web_client.✅.md  M7_push_notifications.✅.md  M9_remote_auth_tls.md
npm/: README.md  install.js  package.json
src/: cli.rs  clipboard.rs  config.rs  db.rs  error.rs  ipc.rs  main.rs  protocol.rs  storage.rs  terminal_guards.rs  utils.rs
src/client/: attach.rs  input.rs  join.rs  list.rs  logs.rs  mod.rs  send.rs
src/daemon/: auth.rs  lifecycle.rs  mod.rs  rpc.rs  rpc_attach.rs  rpc_nodes.rs
src/http/: apps-index.html  apps.rs  auth.rs  mod.rs  nodes.rs  reverse_proxy.rs  sessions.rs  sse.rs  ws.rs
src/node/: mod.rs  registry.rs
src/notification/: channel.rs  dispatcher.rs  event.rs  mod.rs  prompt.rs
src/session/: cursor_tracker.rs  file.rs  logs.rs  mod.rs  mode_tracker.rs  persist.rs  pty.rs  resize.rs  ring.rs  runtime.rs  store.rs  vt100.rs
tests/: cli_errors.rs  e2e_csvlens.rs  e2e_daemon.rs  e2e_pty.rs  output-codex.expected  output-copilot.expected  output-copilot.expected.windows  output-opencode.expected
tests/e2e/: mod.rs
web/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: sessions.spec.ts
web/public/: sw-push.js
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: AttachPanel.tsx  CommandLogo.tsx  Logo.tsx  (+12 more)
(+36 files in other folders)
